datadir = ${datarootdir}/${PACKAGE_NAME}/${subdir}

dist_data_DATA = \
      advanced.html \
      experimental.html \
      groups.html \
      index.html \
      LICENSE \
      prototype.js \
      shift.css \
      shift.html \
      shift.js \
      shift.json

SUBDIRS = \
      advanced \
      experimental \
      groups \
      images \
      javascript \
      shifttq \
      style