datadir = ${datarootdir}/${PACKAGE_NAME}/${subdir}

dist_data_DATA = \
      common.js \
      dialog.js \
      file-row.js \
      formatter.js \
      inspector.js \
      notifications.js \
      prefs-dialog.js \
      remote.js \
      torrent-row.js \
      torrent.js \
      transmission.js

SUBDIRS = \
      jquery