datadir = ${datarootdir}/${PACKAGE_NAME}/${subdir}

dist_data_DATA = \
      jquery.contextmenu.min.js \
      jquery.contextmenu.r2.js \
      jquery.form.js \
      jquery.form.min.js \
      jquery.min.js \
      jquery.transmenu.js \
      jquery.transmenu.min.js \
      jqueryui-1.8.16.min.js \
      json2.js \
      json2.min.js