datadir = ${datarootdir}/${PACKAGE_NAME}/${subdir}

dist_data_DATA = \
      jquery-migrate.min.js \
      jquery-ui.min.js \
      jquery.min.js \
      jquery.transmenu.js \
      jquery.transmenu.min.js \
      jquery.ui-contextmenu.js \
      jquery.ui-contextmenu.min.js \
      json2.js \
      json2.min.js \
      spectrum.js